# fastapi_parcel

./: Dockerfile  docker-compose.yml  pyproject.toml
src/app/: celery_app.py  celery_config.py  main.py  models.py  tasks.py  utils.py
src/app/db/: dbconfig.py
src/app/templates/: base.html  entry.html
