[tool.poetry]
name = "fastapi-parcel"
version = "0.1.0"
description = ""
authors = ["Kim <test@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
itsdangerous = "^2.2.0"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
mysql-connector-python = "^9.1.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.0"
aiomysql = "^0.2.0"
python-multipart = "^0.0.17"
sqlalchemy-utils = "^0.41.2"
celery = "^5.4.0"
redis = "^5.2.0"
asyncio = "^3.4.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
